# whogitit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/actions/pr-summary/: action.yml  analyze.sh
.github/workflows/: ai-attribution.yml  ci.yml  example-usage.yml.template  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: faq.md  migrating-to-1.0.md  troubleshooting.md
docs/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/src/guide/: cli-commands.md  configuration.md  privacy.md
docs/src/guide/commands/: annotations.md  audit.md  blame.md  clear.md  doctor.md  export.md  init.md  pager.md  prompt.md  redact-test.md  retention.md  setup.md  show.md  status.md  summary.md
docs/src/reference/: architecture.md  data-formats.md  git-notes.md  hooks.md
docs/src/usage/: git-integration.md
docs/src/workflows/: ci-cd.md  code-review.md  daily-development.md  team-collaboration.md
hooks/: ai-blame-capture.sh  whogitit-capture.sh
src/: lib.rs  main.rs  retention.rs  utils.rs
src/capture/: diff.rs  hook.rs  mod.rs  pending.rs  snapshot.rs  threeway.rs
src/cli/: annotations.rs  audit.rs  blame.rs  export.rs  mod.rs  output.rs  pager.rs  prompt.rs  redact.rs  retention.rs  setup.rs  show.rs  summary.rs
src/core/: attribution.rs  blame.rs  mod.rs
src/privacy/: config.rs  mod.rs  redaction.rs
src/storage/: audit.rs  mod.rs  notes.rs  trailers.rs
tests/: integration_test.rs
whogitit-vscode/: README.md  package.json
whogitit-vscode/src/: blameProvider.ts  codeLensProvider.ts  decorations.ts  extension.ts  hoverProvider.ts  statusBar.ts
