[package]
name = "ai-blame"
version = "0.1.0"
edition = "2021"
description = "Track AI-generated code at line-level granularity"
license = "MIT"
repository = "https://github.com/dotsetlabs/ai-blame"

[dependencies]
git2 = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
colored = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
