[package]
name = "whogitit"
version = "0.1.0"
edition = "2021"
description = "Track AI-generated code at line-level granularity"
license = "MIT"
repository = "https://github.com/dotsetlabs/whogitit"
homepage = "https://github.com/dotsetlabs/whogitit"
readme = "README.md"
keywords = ["git", "ai", "attribution", "cli", "blame"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
git2 = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
colored = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
