[package]
name = "whogitit"
version = "1.0.0"
edition = "2021"
description = "Track AI-generated code at line-level granularity"
license = "MIT"
repository = "https://github.com/dotsetlabs/whogitit"
homepage = "https://github.com/dotsetlabs/whogitit"
readme = "README.md"
keywords = ["git", "ai", "attribution", "cli", "blame"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
git2 = "0.18"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
colored = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dirs = "5"
atty = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Conditions to При)
cargo-dist-version = "0.27.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to auto-include files like README, LICENSE, CHANGELOG
auto-includes = true

# Homebrew tap configuration
[workspace.metadata.dist.homebrew]
tap = "dotsetlabs/homebrew-tap"
formula = "whogitit"
